# eink-train-display

./: .gitignore  Dockerfile  config.py  configuration.ini  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  server.py
api/: __init__.py  config.py  configuration.ini  dashboard_data.py  dependencies.py  log_setup.py  main.py  render_webpage.py  utils.py
api/routers/: __init__.py  schedule.py
render/: __init__.py
render/html/: dashboard.html
render/pillow/: __init__.py  climate.py  departures.py  fonts.py  pillow.py
render/svelte/: Dockerfile  data.json  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
render/svelte/src/: app.html
render/svelte/src/routes/: +layout.ts  +page.svelte  +page.ts  dashboard.scss  dashboard.ts  dashboard_data.json  data.json  models.ts
render/svelte/tests/: test.js
sources/: __init__.py
sources/daikin/: __init__.py  main.py  models.py
sources/national_rail/: __init__.py  main.py  models.py
sources/national_rail/wsdl/: national_rail.wsdl  rtti_2017-10-01_ldb.wsdl
sources/weather/: __init__.py  open_weather.py
sources/weather/models/: __init__.py  air_quality.py  common.py  weather.py
tests/api/: test_endpoints.py
tests/sources/: test_weather.py
waveshare_epd/: epd7in5_V2.py  epdconfig.py  readme.md
